--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --build",
     "pkg": "pkg . --out-path dist",
-   "start-build": "node dist/app.js"
+    "start-build": "node dist/app.js"
   },
   "pkg": {
     "assets": [
@@ -43,6 +43,7 @@
     "moment-timezone": "^0.5.34",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "mysql2": "^3.16.1",
     "network": "^0.7.0",
     "nodemon": "^2.0.15",
     "qrcode-terminal": "^0.12.0",
